k8s/50-middleware-strip.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-dirtie-prefix
  namespace: dirtie
spec:
  stripPrefix:
    prefixes:
      - /dirtie
