k8s/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dirtie-srv
  namespace: dirtie
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dirtie-srv
  template:
    metadata:
      labels:
        app: dirtie-srv
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      topologySpreadConstraints: # adding this to spread app evenly over pis for testing
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: dirtie-srv
      containers:
        - name: app
          image: ghcr.io/frozenkro/dirtie-srv:latest
          ports:
            - containerPort: 8080
