k8s/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dirtie-srv
  namespace: dirtie
spec:
  selector:
    app: dirtie-srv
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
