k8s/45-ingressroute-path.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dirtie-srv
  namespace: dirtie
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/dirtie`)
      kind: Rule
      services:
        - name: dirtie-srv
          port: 8080
      middlewares:
        - name: strip-dirtie-prefix
